[package]
name = "bittern"
description = "A reference-counted arena for interning and deduplicating data"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.1"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mighto360/bittern"
keywords = ["arena", "rc", "intern", "interner", "symbol"]

[features]
default = ["runtime-rng", "derive"]
derive = ["dep:bittern_derive"]
runtime-rng = ["ahash/runtime-rng"]
compile-time-rng = ["ahash/compile-time-rng"]

[dependencies]
bittern_derive = { version = "0.1.0", path = "../bittern_derive", optional = true }
ahash = { version = "0.8.12", default-features = false }
bumpalo = { version = "3.19.1", default-features = false }
hashbrown = { version = "0.16.1", default-features = false, features = ["inline-more", "raw-entry"] }

[dev-dependencies]
divan = "0.1.16"

# Benchmarks:
[[bench]]
name = "str_interning"
harness = false

# Examples:
[[example]]
name = "str_interning"

[[example]]
name = "parsing"
required-features = ["derive"]

[[example]]
name = "primary_key"
required-features = ["derive"]
