[package]
name = "bittern_derive"
description = "Procedural macros for deriving bittern traits"
version = "0.1.1"
edition = "2021"
rust-version = "1.71.1"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mighto360/bittern"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.44"
syn = "2.0.114"
